installed react icons, added style for homepage

--- a/frontend/eventMate/src/styles/global.scss
+++ b/frontend/eventMate/src/styles/global.scss
@@ -1,9 +1,9 @@
 @import "./variables.scss";
 
 body {
-  font-family: Arial, sans-serif;
-  background-color: $background-color;
-  color: $text-color;
+  // font-family: Arial, sans-serif;
+  // // background-color: $background-color;
+  // color: $text-color;
   margin: 0;
   padding: 0;
 }
