--- a/frontend/eventMate/src/styles/variables.scss
+++ b/frontend/eventMate/src/styles/variables.scss
@@ -1,5 +1,5 @@
 $primary-color: #007bff;
 $secondary-color: #6c757d;
-$background-color: #f8f9fa;
+$background-color: #4287f5;
 $text-color: #212529;
 $border-color: #ddd;
