--- a/frontend/eventMate/src/components/RegisterForm/RegisterForm.module.scss
+++ b/frontend/eventMate/src/components/RegisterForm/RegisterForm.module.scss
@@ -83,3 +83,19 @@ input:focus {
     }
   }
 }
+
+.backButton {
+  background-color: #ccc; /* Example color */
+  border: none;
+  color: #000;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 4px;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+}
+
+.backButton:hover {
+  background-color: #f0eeee; 
+  transform: scale(1.05);
+}
