--- a/frontend/eventMate/src/components/LoginForm/LoginForm.module.scss
+++ b/frontend/eventMate/src/components/LoginForm/LoginForm.module.scss
@@ -87,5 +87,9 @@
   
   .error {
     color: white; /* Red color for error messages */
+    background-color: #FF4500;
+    padding: 10px;
+    border-radius: 4px;
     margin-top: 1rem;
+    font-size: 1.2rem;
   }
