--- a/frontend/eventMate/src/components/LoginForm/LoginForm.module.scss
+++ b/frontend/eventMate/src/components/LoginForm/LoginForm.module.scss
@@ -6,6 +6,7 @@
     align-items: center;
     height: 100%;
     width: 100%;
+    padding: 20px;
   }
 
   .form {
@@ -18,6 +19,7 @@
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     max-width: 400px;
     width: 100%;
+    box-sizing: border-box;
   }
   
   h2 {
@@ -31,10 +33,47 @@
     border: 1px solid #ccc;
     border-radius: 5px;
     font-size: 16px;
+    width: calc(100% - 20px);
+  margin: 0 auto;
+  box-sizing: border-box;
   }
   
-  input::placeholder {
-    color: #888;
+  input:focus {
+    outline: none;
+    border-color: #2a78f5;
+  }
+
+  .passwordContainer {
+    position: relative;
+    width: calc(100% - 20px); 
+    margin: 0 auto;
+  
+    input {
+      width: 100%;
+    }
+  }
+
+  .eyeButton {
+    position: absolute;
+    right: 0.5rem;
+    top: 50%;
+    transform: translateY(-50%);
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    font-size: 1.2rem;
+    color: #333;
+    width: 40px;
+    padding: 0;
+  
+    &:hover {
+      background: transparent;
+      color: #000;
+    }
+  
+    &:focus {
+      outline: none;
+    }
   }
   
   button {
@@ -62,6 +101,8 @@
     cursor: pointer;
     font-size: 18px;
     transition: background-color 0.3s ease;
+    margin: 0 auto;
+  width: calc(100% - 20px);
   
     &:hover {
       background-color: #3266ba;
@@ -78,6 +119,8 @@
     border-radius: 4px;
     font-size: 16px;
     transition: background-color 0.3s ease;
+    margin: 0 auto;
+  width: calc(100% - 20px);
   }
   
   .backButton:hover {
