--- a/frontend/eventMate/src/components/RegisterForm/RegisterForm.module.scss
+++ b/frontend/eventMate/src/components/RegisterForm/RegisterForm.module.scss
@@ -6,6 +6,7 @@
   align-items: center;
   height: 100%;
   width: 100%;
+  padding: 20px;
 }
 
 .form {
@@ -18,6 +19,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
   max-width: 400px;
   width: 100%;
+  box-sizing: border-box;
 }
 
 h2 {
@@ -31,11 +33,47 @@ input {
   border: 1px solid #ccc;
   border-radius: 5px;
   font-size: 16px;
+  width: calc(100% - 20px);
+  margin: 0 auto; /* Center the inputs */
+  box-sizing: border-box;
 }
 
 input:focus {
   outline: none;
   border-color: #2a78f5;
+}
+
+.passwordContainer {
+  position: relative;
+  width: calc(100% - 20px); /* Adjust for padding */
+  margin: 0 auto;
+
+  input {
+    width: 100%;
+  }
+}
+
+.eyeButton {
+  position: absolute;
+  right: 0.5rem; // Adjust as needed
+  top: 50%;
+  transform: translateY(-50%);
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: #333; // Adjust color as needed
+  width: 40px;
+  padding: 0;
+
+  &:hover {
+    background: transparent; // Ensure no background change on hover
+    color: #000; // Adjust the color on hover if needed
+  }
+
+  &:focus {
+    outline: none; // Remove the outline on focus
+  }
 }
 
 .submitButton {
@@ -47,6 +85,8 @@ input:focus {
   cursor: pointer;
   font-size: 18px;
   transition: background-color 0.3s ease;
+  margin: 0 auto; /* Center the submit button */
+  width: calc(100% - 20px);
 
   &:hover {
     background-color: #3266ba;
@@ -93,6 +133,8 @@ input:focus {
   border-radius: 4px;
   font-size: 16px;
   transition: background-color 0.3s ease;
+  margin: 0 auto; /* Center the back button */
+  width: calc(100% - 20px);
 }
 
 .backButton:hover {
