--- a/frontend/eventMate/src/components/PasswordToggle/PasswordToggle.module.scss
+++ b/frontend/eventMate/src/components/PasswordToggle/PasswordToggle.module.scss
@@ -1,3 +1,4 @@
+@import "../../styles/variables.scss";
 .passwordContainer {
   position: relative;
   width: 100%;
@@ -8,16 +9,16 @@
 
 .passwordInput {
   padding: 10px;
-  border: 1px solid #ccc;
+  border: 1px solid $border-color;
   border-radius: 5px;
-  font-size: 16px;
+  font-size: $font-size-medium;
   width: calc(100% - 50px);
   box-sizing: border-box;
-}
 
-.passwordInput:focus {
-  outline: none;
-  border-color: #2a78f5;
+  &:focus {
+    outline: none;
+    border-color: $primary-color;
+  }
 }
 
 .eyeButton {
@@ -26,8 +27,8 @@
   background: transparent;
   border: none;
   cursor: pointer;
-  font-size: 1.4rem;
-  color: #333;
+  font-size: $font-size-large;
+  color: $text-color;
   width: 45px;
   height: 100%;
   display: flex;
@@ -35,8 +36,7 @@
   justify-content: center;
 
   &:hover {
-    background: transparent;
-    color: #000;
+    color: darken($text-color, 20%);
   }
 
   &:focus {
