--- a/frontend/eventMate/src/styles/variables.scss
+++ b/frontend/eventMate/src/styles/variables.scss
@@ -1,5 +1,21 @@
+// Colors
 $primary-color: #007bff;
 $secondary-color: #6c757d;
 $background-color: #4287f5;
 $text-color: #212529;
 $border-color: #ddd;
+$warning-color: #FF4500;
+$success-color: #28a745;
+$error-color: #dc3545;
+
+// Fonts
+$font-family-sans: 'Arial', sans-serif;
+$font-family-serif: 'Georgia', serif;
+$font-family-heading: 'CelebriSans-Bold', sans-serif;
+
+// Font Sizes
+$font-size-small: 14px;
+$font-size-medium: 16px;
+$font-size-large: 18px;
+$font-size-xlarge: 24px;
+$font-size-xxlarge: 36px;
