--- a/frontend/eventMate/src/components/Attendees/Attendees.module.scss
+++ b/frontend/eventMate/src/components/Attendees/Attendees.module.scss
@@ -4,7 +4,7 @@
   border-radius: 8px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
   max-width: 1200px;
- margin-left: 40px;
+  margin-left: 40px;
 }
 
 h2 {
@@ -26,7 +26,7 @@ h2 {
   border-radius: 4px;
   border: 1px solid #ccc;
   font-size: 16px;
-  width: calc(25% - 15px); /* Adjust width to fit better */
+  width: calc(25% - 15px);
 }
 
 .addAttendeeForm button {
@@ -38,7 +38,7 @@ h2 {
   font-size: 16px;
   cursor: pointer;
   transition: background-color 0.3s ease;
-  margin-left: auto; /* Center button if it spans full width */
+  margin-left: auto;
 }
 
 .addAttendeeForm button:hover {
