--- a/frontend/eventMate/src/components/Events/Events.module.scss
+++ b/frontend/eventMate/src/components/Events/Events.module.scss
@@ -4,15 +4,15 @@
   padding: 20px;
   max-width: 800px;
   margin: auto;
-  background-color: #f4f4f4; 
-  border-radius: 8px; 
-  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+  background-color: #f4f4f4;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
 h2 {
   font-size: 2rem;
   margin-bottom: 20px;
-  color: #333; 
+  color: #333;
 }
 
 .eventForm {
@@ -20,10 +20,10 @@ h2 {
   flex-direction: column;
   gap: 15px;
   margin-bottom: 20px;
-  background: #fff; 
-  padding: 20px; 
-  border-radius: 8px; 
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .eventForm input {
@@ -31,7 +31,7 @@ h2 {
   font-size: 1rem;
   border: 1px solid #ccc;
   border-radius: 5px;
-  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1); 
+  box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.1);
 }
 
 .eventForm button {
@@ -61,21 +61,22 @@ h2 {
   padding: 15px;
   margin-bottom: 15px;
   position: relative;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
+  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
 .eventItem h3 {
   margin: 0 0 10px;
   font-size: 1.5rem;
-  color: #333; 
+  color: #333;
 }
 
 .eventItem p {
   margin: 0 0 5px;
-  color: #666; 
+  color: #666;
 }
 
-.updateButton, .deleteButton {
+.updateButton,
+.deleteButton {
   padding: 8px 12px;
   border: none;
   border-radius: 5px;
