--- a/frontend/eventMate/src/components/LoginForm/LoginForm.module.scss
+++ b/frontend/eventMate/src/components/LoginForm/LoginForm.module.scss
@@ -1,138 +1,138 @@
 @import "../../styles//variables.scss";
 
 .formContainer {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    width: 100%;
-    padding: 20px;
-  }
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  width: 100%;
+  padding: 20px;
+}
 
-  .form {
-    display: flex;
-    flex-direction: column;
-    gap: 15px;
-    padding: 20px;
-    border-radius: 10px;
-    background-color: $background-color;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-    max-width: 400px;
-    width: 100%;
-    box-sizing: border-box;
-  }
-  
-  h2 {
-    color: white;
-    font-family: "CelebriSans-Bold", sans-serif;
-    text-align: center;
-  }
-  
-  input {
-    padding: 10px;
-    border: 1px solid #ccc;
-    border-radius: 5px;
-    font-size: 16px;
-    width: calc(100% - 20px);
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+  padding: 20px;
+  border-radius: 10px;
+  background-color: $background-color;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  max-width: 400px;
+  width: 100%;
+  box-sizing: border-box;
+}
+
+h2 {
+  color: white;
+  font-family: $font-family-heading;
+  text-align: center;
+}
+
+input {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 5px;
+  font-size: 16px;
+  width: calc(100% - 20px);
   margin: 0 auto;
   box-sizing: border-box;
-  }
-  
-  input:focus {
-    outline: none;
-    border-color: #2a78f5;
-  }
+}
 
-  .passwordContainer {
-    position: relative;
-    width: calc(100% - 20px); 
-    margin: 0 auto;
-  
-    input {
-      width: 100%;
-    }
-  }
+input:focus {
+  outline: none;
+  border-color: $primary-color;
+}
 
-  .eyeButton {
-    position: absolute;
-    right: 0.5rem;
-    top: 50%;
-    transform: translateY(-50%);
-    background: transparent;
-    border: none;
-    cursor: pointer;
-    font-size: 1.2rem;
-    color: #333;
-    width: 40px;
-    padding: 0;
-  
-    &:hover {
-      background: transparent;
-      color: #000;
-    }
-  
-    &:focus {
-      outline: none;
-    }
-  }
-  
-  button {
+.passwordContainer {
+  position: relative;
+  width: calc(100% - 20px);
+  margin: 0 auto;
+
+  input {
     width: 100%;
-    padding: 0.8rem;
-    background-color: #007bff; /* Primary button color */
-    border: none;
-    border-radius: 4px;
-    color: #fff;
-    font-size: 1rem;
-    cursor: pointer;
-    transition: background-color 0.3s ease;
   }
-  
-  button:hover {
-    background-color: #0056b3; /* Darker shade on hover */
-  }
+}
 
-  .submitButton {
-    padding: 10px;
-    background-color: #FF4500;
-    color: white;
-    border: none;
-    border-radius: 5px;
-    cursor: pointer;
-    font-size: 18px;
-    transition: background-color 0.3s ease;
-    margin: 0 auto;
-  width: calc(100% - 20px);
-  
-    &:hover {
-      background-color: #3266ba;
-      transform: scale(1.05);
-    }
-  }
+.eyeButton {
+  position: absolute;
+  right: 0.5rem;
+  top: 50%;
+  transform: translateY(-50%);
+  background: transparent;
+  border: none;
+  cursor: pointer;
+  font-size: 1.2rem;
+  color: #333;
+  width: 40px;
+  padding: 0;
 
-  .backButton {
-    background-color: #ccc; /* Example color */
-    border: none;
+  &:hover {
+    background: transparent;
     color: #000;
-    padding: 10px 20px;
-    cursor: pointer;
-    border-radius: 4px;
-    font-size: 16px;
-    transition: background-color 0.3s ease;
-    margin: 0 auto;
-  width: calc(100% - 20px);
   }
-  
-  .backButton:hover {
-    background-color: #f0eeee; 
+
+  &:focus {
+    outline: none;
+  }
+}
+
+button {
+  width: 100%;
+  padding: 0.8rem;
+  background-color: #007bff;
+  border: none;
+  border-radius: 4px;
+  color: #fff;
+  font-size: 1rem;
+  cursor: pointer;
+  transition: background-color 0.3s ease;
+}
+
+button:hover {
+  background-color: #0056b3;
+}
+
+.submitButton {
+  padding: 10px;
+  background-color: #ff4500;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 18px;
+  transition: background-color 0.3s ease;
+  margin: 0 auto;
+  width: calc(100% - 20px);
+
+  &:hover {
+    background-color: #3266ba;
     transform: scale(1.05);
   }
-  
-  .error {
-    color: white; /* Red color for error messages */
-    background-color: #FF4500;
-    padding: 10px;
-    border-radius: 4px;
-    margin-top: 1rem;
-    font-size: 1.2rem;
-  }
+}
+
+.backButton {
+  background-color: #ccc;
+  border: none;
+  color: #000;
+  padding: 10px 20px;
+  cursor: pointer;
+  border-radius: 4px;
+  font-size: 16px;
+  transition: background-color 0.3s ease;
+  margin: 0 auto;
+  width: calc(100% - 20px);
+}
+
+.backButton:hover {
+  background-color: #f0eeee;
+  transform: scale(1.05);
+}
+
+.error {
+  color: white;
+  background-color: #ff4500;
+  padding: 10px;
+  border-radius: 4px;
+  margin-top: 1rem;
+  font-size: 1.2rem;
+}
