--- a/frontend/eventMate/src/pages/Dashboard/Dashboard.module.scss
+++ b/frontend/eventMate/src/pages/Dashboard/Dashboard.module.scss
@@ -1,9 +1,9 @@
 .dashboardContainer {
-    display: flex;
-  }
-  
-  .mainContent {
-    margin-left: 250px; /* Adjust based on sidebar width */
-    padding: 20px;
-    width: calc(100% - 250px); /* Adjust based on sidebar width */
-  }
+  display: flex;
+}
+
+.mainContent {
+  margin-left: 250px;
+  padding: 20px;
+  width: calc(100% - 250px);
+}
