--- a/frontend/eventMate/src/styles/global.scss
+++ b/frontend/eventMate/src/styles/global.scss
@@ -1,13 +1,14 @@
 @import "./variables.scss";
 
 body {
-  // font-family: Arial, sans-serif;
-  // // background-color: $background-color;
-  // color: $text-color;
+  font-family: $font-family-sans;
+  color: $text-color;
   margin: 0;
   padding: 0;
+  background-color: $background-color;
 }
 
 button {
   cursor: pointer;
+  font-family: inherit;
 }
